--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,41 +1,32 @@
-# This is a basic workflow to help you get started with Actions
 name: Portfolio
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check-out repository
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v4
 
-      # Install project
       - name: Install project
         run: npm install
 
-      # Build project
       - name: Build project
-        run: npm run-script build
+        run: npm run build
 
-      # Push to Github Pages
+      - name: Check Build Output
+        run: ls -la dist
+
       - name: Github Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # Build directory to deploy
-          build_dir: dist
+          branch: gh-pages
+          folder: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
